src/objects/uriage__c.object
<CustomObject>
    <description>インターブレインズ用</description>
    <fields>
        <fullName>anken__c</fullName>
        <label>案件名</label>
        <referenceTo>CustomObject11__c</referenceTo>
        <relationshipLabel>売上</relationshipLabel>
        <relationshipName>AuX5</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bikou__c</fullName>
        <label>売上備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>koumoku__c</fullName>
        <label>項目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>suuryou__c</fullName>
        <label>数量</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tanka__c</fullName>
        <label>単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uriage__c</fullName>
        <label>売上</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>売上</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>anken__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>売上№</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>